# global-secrets-manager

./: Cargo.toml  README.md
examples/: eg1.rs
src/: lib.rs
