[package]
name = "global-secrets-manager"
version = "0.1.2"
edition = "2021"
authors = ["eight"]
license = "AGPL-3.0-or-later"
description = "This is a procedural macro for easy use of AWS Secrets Manager. This code allows you to create a global constant of the same type as the name of Secrets Manager by simply creating a structure that matches the key pair set in Secrets Manager. This way, you can access the secret values stored in Secrets Manager without writing any code to fetch them from AWS. "
repository = "https://github.com/eightfx/global-secrets-manager"
documentation = "https://docs.rs/global-secrets-manager"
readme = "README.md"
keyword = ["secrets manager", "aws", "secrets", "manager", "global", "constant", "macro", "procedural"]
categories = ["aws", "secrets manager", "constant", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
